ATLAS-2427: Pr review